# iotseed-sdks-core

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  iotseed_sdks_core.cbp
examples/: Makefile  examples.mk
examples/jsonrpc/: CMakeLists.txt  Makefile  jsonrpc.c
examples/mqtt_client/: CMakeLists.txt  mqtt_client  mqtt_client.c
examples/recipe/: CMakeLists.txt  CMakeSettings.json  Makefile  recipe  recipe.c
examples/spdlog/: CMakeLists.txt  Makefile  spdlog  spdlog.c
inc/: glbinc.h  glbtypes.h  jsonrpc.h  log.h  mongoose.h  mqtt.h  operation_utils.h  recipe.h  str_utils.h  sysinc.h  time_utils.h
lib/mongoose/: mongoose.c
src/: jsonrpc.cpp  log.cpp  mqtt.cpp  mqtt.h  operation_utils.cpp  recipe.cpp  str_util.cpp  str_utils.cpp  time_utils.cpp
